--- a/.github/workflows/pdtest.yml
+++ b/.github/workflows/pdtest.yml
@@ -12,6 +12,8 @@ jobs:
       decoders: ${{ steps.set-matrix.outputs.decoders }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: false
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
