--- a/.github/workflows/pdtest.yml
+++ b/.github/workflows/pdtest.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        decoder: ${{ fromJSON(needs.test.outputs.boards-aarch) }}
+        decoder: ${{ fromJSON(needs.compute-matrix.outputs.decoders) }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
