--- a/.github/workflows/pdtest.yml
+++ b/.github/workflows/pdtest.yml
@@ -23,6 +23,7 @@ jobs:
 
   test-decoder:
     runs-on: "ubuntu-latest"
+    needs: compute-matrix
     strategy:
       fail-fast: false
       matrix:
