--- a/.github/workflows/pdtest.yml
+++ b/.github/workflows/pdtest.yml
@@ -30,6 +30,8 @@ jobs:
         decoder: ${{ fromJSON(needs.compute-matrix.outputs.decoders) }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
