--- a/.github/workflows/pdtest.yml
+++ b/.github/workflows/pdtest.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          submodules: false
+          submodules: true
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
